# bybit_orderbook

./: Cargo.toml  readme.md
bybit_download/: bybit.py  download_bybit.py  snap_tick.py
examples/: decompress.rs  read.rs
src/: lib.rs  parquet.rs  tick.rs  util.rs
